# car_simualtion

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  package.xml
asado_bringup/: CMakeLists.txt  package.xml
asado_bringup/src/: motor_function.c  motor_tool.cpp
asado_control/: CMakeLists.txt  README.md  package.xml
asado_control/config/: control.yaml
asado_control/launch/: asado_control.launch  control.launch
asado_description/: CMakeLists.txt  README.md  package.xml
asado_description/config/: chassis.yaml  sensor.yaml
asado_description/config/wheels/: LB_wheel.yaml  LF_wheel.yaml  RB_wheel.yaml  RF_wheel.yaml
asado_description/launch/: spawn.launch  view.launch  world.launch
asado_description/rviz/: asado.rviz  asado_description.rviz
asado_description/urdf/: asado.gazebo  asado.xacro
asado_description/urdf/include/: chassis.xacro  plugin.xacro  sensor.xacro  wheel.xacro
asado_description/worlds/: asado.world
asado_gazebo/: CMakeLists.txt  package.xml
asado_gazebo/launch/: asado.launch  asado_view.launch  base.launch  spawn.launch  world.launch
asado_gazebo/worlds/: 27_TDK.STL
asado_navigation/: CMakeLists.txt  README.md  package.xml
asado_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
asado_navigation/launch/: amcl.launch  localization.launch  move_base.launch  navigation.launch
asado_navigation/launch/include/: amcl.launch  gmapping.launch  move_base.launch
asado_navigation/maps/: 27_TDK_map.yaml  27_TDK_map_edit.pgm
asado_navigation/rviz/: gmapping.rviz  move_base.rviz
asado_sensors/: CMakeLists.txt  README.md  package.xml
asado_sensors/launch/: rplidar_s2.launch  view_rplidar_s2.launch
asado_simulation/: CMakeLists.txt  README.md  package.xml
asado_simulation/launch/: spawn.launch  world.launch
asado_simulation/src/: SetJointVelocity.py
asado_simulation/urdf/: asado.gazebo  asado.xacro
asado_slam/: CMakeLists.txt  README.md  package.xml
asado_slam/launch/: amcl.launch  gmapping.launch
asado_slam/maps/: 27_TDK_map.yaml
asado_slam/rviz/: amcl.rviz  gmapping.rviz
asado_teleop/: CMakeLists.txt  README.md  package.xml
asado_teleop/config/: teleop_ps4.yaml
asado_teleop/launch/: teleop.launch  teleop_joystick.launch  teleop_keyboard.launch
asado_test/: CMakeLists.txt  package.xml
asado_test/launch/: amcl.launch  move_base.launch
asado_test/maps/: 27_TDK_map_ori.pgm
asado_test/param/: base_local_planner_params.yaml  costmap_common_params_asado.yaml  dwa_local_planner_params_asado.yaml  global_costmap_params.yaml  local_costmap_params.yaml
asado_test/rviz/: amcl.rviz  move_base.rviz
config/: car_control.yaml  diff_drive.yaml  joint_names_car_simulation.yaml
features/pollo_main_control/: CMakeLists.txt
features/pollo_main_control/launch/: localization.launch  navigation.launch
features/pollo_plate_control/: CMakeLists.txt  README.md  package.xml
launch/: car_control.launch  car_world.launch  diff_drive.launch  display.launch  gazebo.launch  model.launch  spawn.launch  world.launch
meshes/: LB_wheel.STL
pollo_bringup/: CMakeLists.txt  README.md  package.xml
pollo_bringup/include/pollo_bringup/: motor_function.h
pollo_bringup/launch/: bringup.launch
pollo_bringup/src/: motor_comm.cpp  motor_function.c  motor_tool.cpp
pollo_control/: CMakeLists.txt  package.xml
pollo_control/config/: control.yaml
pollo_control/launch/: control.launch
pollo_description/: CMakeLists.txt  package.xml
pollo_description/config/: chassis.yaml  sensor.yaml
pollo_description/config/wheels/: RB_wheel.yaml  RF_wheel.yaml
pollo_description/meshes/: chassis.STL
pollo_description/rviz/: pollo_description.rviz
pollo_description/urdf/include/: plugin.xacro  sensor.xacro  wheel.xacro
pollo_gazebo/: CMakeLists.txt  README.md  package.xml
pollo_gazebo/launch/: obstacle.launch  spawn.launch  world.launch
pollo_gazebo/src/: obstacle_spawner.py
pollo_gazebo/worlds/: 27_TDK.world
pollo_mln/: CMakeLists.txt  README.md  package.xml
pollo_mln/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml
pollo_mln/launch/: amcl.launch  gmapping.launch  localization.launch  mapping.launch  move_base.launch  navigation.launch
pollo_mln/maps/: 27_TDK_map.yaml  itron_basement.yaml
pollo_mln/rviz/: amcl.rviz  gmapping.rviz  move_base.rviz
pollo_navigation/: CMakeLists.txt  README.md  package.xml
pollo_sensors/: CMakeLists.txt  README.md  package.xml
pollo_teleop/: CMakeLists.txt  README.md  package.xml  rosboard.md
pollo_teleop/config/: ps4.yaml
pollo_teleop/launch/: teleop.launch
pollo_teleop/nodes/: generate_qrcode.py
pollo_teleop/rosboard/html/: index.html
pollo_teleop/rosboard/html/css/: index.css  joystick.css  slider.css  tab.css
pollo_teleop/rosboard/html/include/: example.js  joystickControl.js  rosConnection.js
pollo_teleop/rosboard/html/js/: local_ip.js
pollo_teleop/rosboard/html/js/viewers/meta/: Viewer.js
pollo_teleop/rosboard/html/module/: local_ip.js  main.js  nipplejs.js
pollo_ws/src/features/pollo_main_control/: package.xml
pollo_ws/src/features/pollo_upper_control/: CMakeLists.txt  README.md  package.xml
pollo_ws/src/pollo_bringup/: CMakeLists.txt
pollo_ws/src/pollo_bringup/launch/: bringup.launch
pollo_ws/src/pollo_gazebo/: CMakeLists.txt  README.md  package.xml
pollo_ws/src/pollo_gazebo/launch/: spawn.launch
pollo_ws/src/pollo_gazebo/worlds/: 27_TDK.world
pollo_ws/src/pollo_teleop/: CMakeLists.txt  README.md
pollo_ws/src/pollo_teleop/rosboard/html/css/: joystick.css
pollo_ws/src/pollo_teleop/rosboard/html/js/: index.js  joystick.js  local_ip.js
pollo_ws/src/pollo_teleop/rosboard/html/js/viewers/: JoystickController.js
rviz/: car.rviz
scripts/: entrypoint.sh
sensors/camera/: CMakeLists.txt  package.xml
sensors/camera/launch/: camera.launch
src/: SetJointVelocity.py
urdf/: car.gazebo  car.urdf  car.xacro  car_simulation.csv  car_simulation.urdf  car_simulation.urdf.xacro
worlds/: car.world
(+52 files in other folders)
