<package format="2">
  <name>car_simulation</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for car_simulation</p>
    <p>This package contains configuration data, 3D models and launch files
for car_simulation robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="kidalfonso@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>controller_manager</depend>
  <depend>gazebo-ros-control</depend>
  <depend>rqt_robot_steering</depend>
  <depend>gazebo_ros</depend>
  
  <export>
    <architecture_independent />
  </export>
</package>