<package format="2">
  <name>asado_navigation</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for asado_simulation</p>
    <p>This package contains configuration data, 3D models and launch files
for asado_simulation robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="kidalfonso@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <export>
    <architecture_independent />
  </export>
</package>