<?xml version="1.0"?>
<package format="2">
  <name>pollo_gazebo</name>
  <version>1.0.0</version>
  <description>Spawn robot in gazebo</description>
  <maintainer email="kidalfonso@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <architecture_independent />
  </export>

</package>
